--- a/src/app/pages/articulos/articulos.component.html
+++ b/src/app/pages/articulos/articulos.component.html
@@ -1,5 +1,22 @@
 <h2 class="text-center">Artículos</h2>
 
+<button class="btn btn-primary fw-bold me-5" type="button">
+        <i class="me-2"></i> Crear nuevo artículos
+</button>
+
+<button class="btn btn-warning fw-bold me-5" type="button">
+        <i class="me-2"></i> Editar  artículos
+</button>
+
+<button class="btn btn-danger fw-bold me-5" type="button">
+    <i class="me-2"></i> Borrar artículos
+</button>
+
+<button class="btn btn-danger fw-bold me-5" type="button" (click)="ConsultarArticulos()">
+    <i class="me-2"></i> Consultar
+</button>
+
+
 <div class="row">
     <div class="col">
 
