--- a/src/app/pages/pedidos/pedidos.component.html
+++ b/src/app/pages/pedidos/pedidos.component.html
@@ -1,1 +1,50 @@
-<p>pedidos works!</p>
+<h2 class="text-center">Pedidos</h2>
+
+<button class="btn btn-primary fw-bold me-5" type="button">
+        <i class="me-2"></i> Crear nuevo pedido
+</button>
+
+<button class="btn btn-warning fw-bold me-5" type="button">
+        <i class="me-2"></i> Editar  pedido
+</button>
+
+<button class="btn btn-danger fw-bold me-5" type="button">
+        <i class="me-2"></i> Borrar pedido
+</button>
+
+
+<div class="row">
+    <div class="col">
+
+        <table class="table table-info table-striped mt-5">
+            <thead>
+                <tr>
+                    <th scope="col">#</th>
+                    <th scope="col">First</th>
+                    <th scope="col">Last</th>
+                    <th scope="col">Handle</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <th scope="row">1</th>
+                    <td>Mark</td>
+                    <td>Otto</td>
+                    <td>@mdo</td>
+                </tr>
+                <tr>
+                    <th scope="row">2</th>
+                    <td>Jacob</td>
+                    <td>Thornton</td>
+                    <td>@fat</td>
+                </tr>
+                <tr>
+                    <th scope="row">3</th>
+                    <td colspan="2">Larry the Bird</td>
+                    <td>@twitter</td>
+                </tr>
+            </tbody>
+        </table>
+
+    </div>
+</div>
