--- a/src/app/pages/usuarios/usuarios.component.html
+++ b/src/app/pages/usuarios/usuarios.component.html
@@ -1,5 +1,17 @@
 <h2 class="text-center">Usuarios</h2>
 
+<button class="btn btn-primary fw-bold me-5" type="button">
+        <i class="me-2"></i> Crear nuevo usuario
+     </button>
+
+<button class="btn btn-warning fw-bold me-5" type="button">
+        <i class="me-2"></i> Editar  usuario
+     </button>
+
+<button class="btn btn-danger fw-bold me-5" type="button">
+        <i class="me-2"></i> Borrar usuario
+     </button>
+
 <table class="table table-primary table-striped mt-5">
     <thead>
         <tr>
